# python-project-lvl3

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  hexlet-io-courses.html  pyproject.toml
page_loader/: __init__.py  load_page.py
page_loader/scripts/: page_loader.py
tests/: test_load_page.py
tests/fixtures/: index.html  result.html
