[tool.poetry]
name = "uladzislau97_page-loader"
version = "0.2.2"
description = "Download the internet page and put it in the specified folder"
authors = ["Uladzislau Vasilyeu <VSvasilyev97@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Uladzislau97/python-project-lvl3"
repository = "https://github.com/Uladzislau97/python-project-lvl3"
documentation = "https://github.com/Uladzislau97/python-project-lvl3"

packages = [
    { include = "page_loader" },
]

keywords = [
    "page-loader",
    "page-load"
]

classifiers = [
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4"
requests = "^2.23"
requests_mock = "^1.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
pytest = "^5.3"
pytest-cov = "^2.8"
    
[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
